PROJECT(trainsManager)
cmake_minimum_required(VERSION 3.5)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(trainsManager ${DIR_SRCS})

#SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_BUILD_TYPE "DEBUG")
SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O0 -Wall")
